编写 TCP 客户端代码